--- a/ce/stackingBar.html
+++ b/ce/stackingBar.html
@@ -30,7 +30,7 @@
 <script src="../plugin/d3/d3.v3.min.js"></script>
 <script  src="../plugin/d3/d3.tip.js"></script>
 <script  src="js/data.js"></script>
-<script src="./js/common.js"></script>
+<script src="../common/ChartCommon.js"></script>
 <script>
     $(function(){
         var cs = new chartStyle("#chartDFAB2A73",CStyle);
@@ -69,7 +69,7 @@
             detailAll = queryJson.detail[0],                         // 全部属性 - 细分
             labelAll = queryJson.label[0];                           // 全部属性 - 标签
 
-        const maxData = d3.max(xTitle.map(function(d){ let db = 0;total.records.filter(function(d1){ if( d1[dimension.field] === d){ db += d1[measure.field]; }});return db;}))*11/10;  // 最大值重新修改
+        const maxData = d3.max(xTitle.map(function(d){ let db = 0;total.records.filter(function(d1){ if( d1[dimension.fieldId] === d){ db += d1[measure.fieldId]; }});return db;}))*11/10;  // 最大值重新修改
         const legendData = chartLegendData(el,total,CStyle);                // 获取图例创建后的数据
 
         /*
@@ -128,14 +128,14 @@
         * */
         let finalData = dimValues[dimension.fieldId].map(function(x){
             let db = total.records.filter(function(d){
-                if(d[dimension.field] === x){
+                if(d[dimension.fieldId] === x){
                     return d;
                 }
             });
             let gt = 0;
             db.map(function(d){
                 d.y0 = gt;
-                gt += d[measure.field];
+                gt += d[measure.fieldId];
                 return d;
             });
             return db;
@@ -221,12 +221,12 @@
             .data(function(d) { return d; })
             .enter().append("rect")
             .attr("class","areaBlock")
-            .attr("data-id",function (d){ if(colourAll){ return d[colourAll.field] } })
-            .style("fill",function(d){ if(colourAll){ return o(d[colourAll.field]); }else{return defaultColor;}})
-            .attr("x", function(d) { if(axisAorY){ if(sizeAll){ return  x(d[dimension.field]) + (x.rangeBand() -w(d[sizeAll.field]))/2}else{return  x(d[dimension.field])}}else{return y(d.y0) }  })
-            .attr("y", function(d) { if(axisAorY){ if(colourAll.dimMea === 0){ return y(d[measure.field] + d.y0) ; }else{ return y(d[measure.field]); }  }else{ if(sizeAll){ console.log(); return  x(d[dimension.field]) + (x.rangeBand() - w(d[sizeAll.field]))/2 }else{ return  x(d[dimension.field]) }}})
-            .attr("height", function(d) {if(axisAorY){return  height0 - y(d[measure.field])}else{if(sizeAll){return w(d[sizeAll.field]);}else{ return x.rangeBand() ;}}})
-            .attr("width", function(d) {if(axisAorY){if(sizeAll){return w(d[sizeAll.field]);}else{return x.rangeBand() ;}}else{return y(d[measure.field]);}})
+            .attr("data-id",function (d){ if(colourAll){ return d[colourAll.fieldId] } })
+            .style("fill",function(d){ if(colourAll){ return o(d[colourAll.fieldId]); }else{return defaultColor;}})
+            .attr("x", function(d) { if(axisAorY){ if(sizeAll){ return  x(d[dimension.fieldId]) + (x.rangeBand() -w(d[sizeAll.fieldId]))/2}else{return  x(d[dimension.fieldId])}}else{return y(d.y0) }  })
+            .attr("y", function(d) { if(axisAorY){ if(colourAll.dimMea === 0){ return y(d[measure.fieldId] + d.y0) ; }else{ return y(d[measure.fieldId]); }  }else{ if(sizeAll){ console.log(); return  x(d[dimension.fieldId]) + (x.rangeBand() - w(d[sizeAll.fieldId]))/2 }else{ return  x(d[dimension.fieldId]) }}})
+            .attr("height", function(d) {if(axisAorY){return  height0 - y(d[measure.fieldId])}else{if(sizeAll){return w(d[sizeAll.fieldId]);}else{ return x.rangeBand() ;}}})
+            .attr("width", function(d) {if(axisAorY){if(sizeAll){return w(d[sizeAll.fieldId]);}else{return x.rangeBand() ;}}else{return y(d[measure.fieldId]);}})
             .on({
                 "mouseover":function(d){
                     d3.select(this).attr("stroke",'#000');
@@ -237,12 +237,12 @@
                         .style("left",(tx - margin.left - margin.right + 100) + "px")
                         .text("");
 
-                    div.append("text").text( dimension.fieldAlias + "：" + d[dimension.field]);
-                    if(colourAll){  div.append("text").text( colourAll.fieldAlias + "：" + d[colourAll.field]);  }
-                    if(sizeAll){    div.append("text").text( sizeAll.fieldAlias + "：" + d[sizeAll.field]);  }
-                    if(detailAll){  div.append("text").text( detailAll.fieldAlias + "：" + d[detailAll.field]);  }
-                    if(labelAll){   div.append("text").text( labelAll.fieldAlias + "：" + d[labelAll.field]);    }
-                    div.append("text").text( measure.fieldAlias + "：" + d[measure.field]);
+                    div.append("text").text( dimension.fieldAlias + "：" + d[dimension.fieldId]);
+                    if(colourAll){  div.append("text").text( colourAll.fieldAlias + "：" + d[colourAll.fieldId]);  }
+                    if(sizeAll){    div.append("text").text( sizeAll.fieldAlias + "：" + d[sizeAll.fieldId]);  }
+                    if(detailAll){  div.append("text").text( detailAll.fieldAlias + "：" + d[detailAll.fieldId]);  }
+                    if(labelAll){   div.append("text").text( labelAll.fieldAlias + "：" + d[labelAll.fieldId]);    }
+                    div.append("text").text( measure.fieldAlias + "：" + d[measure.fieldId]);
 
                 },
                 "mousemove":function(){
@@ -305,27 +305,27 @@
                     let ret = null;
                     if(axisAorY){
                         if(vertical.in){
-                            ret = x(d[dimension.field]) + (x.rangeBand())/2;
+                            ret = x(d[dimension.fieldId]) + (x.rangeBand())/2;
                         }else if(vertical.under){
                             if(sizeAll){
-                                ret = x(d[dimension.field]) + (x.rangeBand() + w(d[sizeAll.field]))/2
+                                ret = x(d[dimension.fieldId]) + (x.rangeBand() + w(d[sizeAll.fieldId]))/2
                             }else{
-                                ret = x(d[dimension.field]) + x.rangeBand();
+                                ret = x(d[dimension.fieldId]) + x.rangeBand();
                             }
                         }else{
                             if(sizeAll){
-                                ret = x(d[dimension.field]) + (x.rangeBand() -w(d[sizeAll.field]))/2
+                                ret = x(d[dimension.fieldId]) + (x.rangeBand() -w(d[sizeAll.fieldId]))/2
                             }else{
-                                ret = x(d[dimension.field])
+                                ret = x(d[dimension.fieldId])
                             }
                         }
                     }else{
                         if(horizontal.in){
-                            ret = y(d[measure.field]/2 + d.y0 );
+                            ret = y(d[measure.fieldId]/2 + d.y0 );
                         }else if(horizontal.under){
                             ret = y(d.y0 );
                         }else{
-                            ret = y(d[measure.field] + d.y0 );
+                            ret = y(d[measure.fieldId] + d.y0 );
                         }
                     }
                     return  ret;
@@ -334,26 +334,26 @@
                     let ret = null;
                     if(axisAorY){
                         if(horizontal.in){
-                            ret = y(d[measure.field]/2 + d.y0 );
+                            ret = y(d[measure.fieldId]/2 + d.y0 );
                         }else if(horizontal.under){
                             ret = y(d.y0 );
                         }else{
-                            ret = y(d[measure.field]);
+                            ret = y(d[measure.fieldId]);
                         }
                     }else{
                         if(vertical.in){
-                            ret = x(d[dimension.field]) + (x.rangeBand())/2;
+                            ret = x(d[dimension.fieldId]) + (x.rangeBand())/2;
                         }else if(vertical.under){
                             if(sizeAll){
-                                ret = x(d[dimension.field]) + (x.rangeBand() + w(d[sizeAll.field]))/2
+                                ret = x(d[dimension.fieldId]) + (x.rangeBand() + w(d[sizeAll.fieldId]))/2
                             }else{
-                                ret = x(d[dimension.field]) + x.rangeBand();
+                                ret = x(d[dimension.fieldId]) + x.rangeBand();
                             }
                         }else{
                             if(sizeAll){
-                                ret = x(d[dimension.field]) + (x.rangeBand() - w(d[sizeAll.field]))/2
+                                ret = x(d[dimension.fieldId]) + (x.rangeBand() - w(d[sizeAll.fieldId]))/2
                             }else{
-                                ret = x(d[dimension.field])
+                                ret = x(d[dimension.fieldId])
                             }
                         }
                     }
@@ -412,19 +412,19 @@
                 })
                 .text(function(d){
                     if(CStyle.label.overlapping){
-                        const result = calculate(d[labelAll.field],$(this).css("font-size"),$(this).css("font-family"));
+                        const result = calculate(d[labelAll.fieldId],$(this).css("font-size"),$(this).css("font-family"));
                         let reservedH = null,
                             reservedW = null;
                         if(axisAorY){
-                            reservedH = height0 - y(d[measure.field])
+                            reservedH = height0 - y(d[measure.fieldId])
                         }else{
-                            reservedW = y(d[measure.field]);
+                            reservedW = y(d[measure.fieldId]);
                         }
                         if(reservedH >= result.height || reservedW >= result.width){
-                            return d[labelAll.field];
+                            return d[labelAll.fieldId];
                         }
                     }else{
-                        return d[labelAll.field];
+                        return d[labelAll.fieldId];
                     }
                 })
                 .filter(function(d,i){
