新增 智能营销

--- a/editBI.html
+++ b/editBI.html
@@ -838,7 +838,7 @@
 							<li class="fl">
 								<img src="images/icon_circle.png" alt="" />
 								<input type="radio" name="methods"/>
-								<span>自动</span>
+								<span>手动</span>
 							</li>
 						</ul>
 						<div class="f-search-box">
