新增智能风控

--- a/main.html
+++ b/main.html
@@ -206,7 +206,7 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage4" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<iframe id="iframepage4" src="html/static/risk.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
 					</div>
