修改BI，柱状图的X轴重叠问题

--- a/editBI.html
+++ b/editBI.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="plugin/jQuery-contextMenu/jquery.contextMenu.min.css">
 	<!--D3绘图时需要用到的样式文件-->
 	<link rel="stylesheet" href="css/BI_d3.css" />
+	  <link rel="stylesheet" href="css/BI_d3.css" />
 
     <!--[if lt IE 9]>
       <script src="common/html5shiv.min.js"></script>
