--- a/editBI.html
+++ b/editBI.html
@@ -75,137 +75,253 @@
 			<div class="op-box1 op-box">
 				<!--图表 start-->
 				<div class="chart-attr-box">
+					<!-- <div class="title-box">
+						<h3>图表</h3>
+					</div> -->
 					<div class="title-box">
 						<h3>图表</h3>
+						<ul class="tab_chart  option-head">
+							<li class="on">数据</li>
+							<li>样式</li>
+						</ul>
 					</div>
-					<div class="set-axis-box">
-						<div class="set-x set-axis">
-							<p>X轴</p>
-							<div class="x-pills pills">
-								<ul>
-									<!--<li>
-										<span>年-月-日（发货日期）</span>
-									</li>
-									<li>
-										<span>国家</span>
-									</li>-->
-								</ul>
+					<div class="clear"></div>
+					<div class="chart_box option-list">
+						<div class="chart_list">
+							<div class="set-axis-box">
+								<div class="set-x set-axis">
+									<p>X轴</p>
+									<div class="x-pills pills">
+										<ul>
+											<!--<li>
+												<span>年-月-日（发货日期）</span>
+											</li>
+											<li>
+												<span>国家</span>
+											</li>-->
+										</ul>
+									</div>
+									<div class="axis-empty empty">拖入字段</div>
+								</div>
+								<img src="images/icon_change.png" alt="" title="交换坐标数据" class="change-axis" onclick="xyChange()" />
+								<div class="set-y set-axis">
+									<p>Y轴</p>
+									<div class="y-pills pills">
+										<ul>
+											<!--<li>
+												<span>度量值</span>
+											</li>
+											<li>
+												<span>邮寄方式</span>
+											</li>-->
+										</ul>
+									</div>
+									<div class="axis-empty empty">拖入字段</div>
+								</div>
 							</div>
-							<div class="axis-empty empty">拖入字段</div>
+							<div class="opt-attr-box">
+								<p>属性</p>
+								<div class="opt-chart-type">
+									<div class="chart-type-val">
+										<span data-type="101">柱状图</span>
+										<i class="fa fa-caret-down fr"></i>
+									</div>
+									<div class="chart-type-lists">
+										<ul>
+											<li data-type="101" class="active">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl"/>
+													<span>柱状图</span>
+												</div>
+											</li>
+											<li data-type="102">
+												<div>
+													<img src="images/icon_line_on.png" alt="" class="fl" />
+													<span>折线图</span>
+												</div>
+											</li>
+											<li data-type="103">
+												<div>
+													<img src="images/icon_pie_on.png" alt="" class="fl" />
+													<span>饼图</span>
+												</div>
+											</li>
+											<li data-type="0">
+												<div>
+													<img src="images/icon_table_on.png" alt="" class="fl" />
+													<span>表格</span>
+												</div>
+											</li>
+											<li data-type="104">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>堆叠柱状图</span>
+												</div>
+											</li>
+											<li data-type="105">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>区域图</span>
+												</div>
+											</li>
+											<li data-type="106">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>散点图</span>
+												</div>
+											</li>
+											<li data-type="107">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>甘特图</span>
+												</div>
+											</li>
+											<li data-type="108">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>仪表盘</span>
+												</div>
+											</li>
+											<li data-type="109">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>漏斗图</span>
+												</div>
+											</li>
+											<li data-type="110">
+												<div>
+													<img src="images/icon_bar_on.png" alt="" class="fl" />
+													<span>矩阵图</span>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!--数据筛选-->
+							<div class="data-screening">
+								<p>数据筛选</p>
+								<div class="datas-pills pills">
+										<ul>
+											<!--<li>
+												<span>度量值</span>
+											</li>
+											<li>
+												<span>邮寄方式</span>
+											</li>-->
+										</ul>
+									</div>
+									<div class="data-empty empty">拖入字段</div>
+							</div>
+							<!--保存刷新-->
+							<div class="data-refresh">
+								<a onclick="refresh.save_config(id_)"><i class="fa fa-refresh"></i>刷新</a>
+							</div>
 						</div>
-						<img src="images/icon_change.png" alt="" title="交换坐标数据" class="change-axis" onclick="xyChange()" />
-						<div class="set-y set-axis">
-							<p>Y轴</p>
-							<div class="y-pills pills">
-								<ul>
-									<!--<li>
-										<span>度量值</span>
-									</li>
-									<li>
-										<span>邮寄方式</span>
-									</li>-->
-								</ul>
+						<div class="chart_list" style="display:none">
+							<div class="tab_title">
+								<label>标题</label>
+								<div class="tab_show">
+									<span>显示</span>
+									<input type="checkbox" checked="checked" class="tab_pitch" style="margin: 0;"/>
+								</div>
 							</div>
-							<div class="axis-empty empty">拖入字段</div>
+							<div class="tab_tit">
+								<div class="tab_bar">
+									<input type="text"/>
+								</div>
+								<div class="set-text-color">
+									<div class="color-row">
+										<input type="hidden" name="unique-name-1" data-palette='["#D50000","#304FFE","#00B8D4","#69F0AE","#FFFF00"]' value="#00B8D4">
+									</div>
+								</div>
+								<div class="set-text-size sc-color">
+									<select>
+										<-list value="1">9</-list>
+										<-list value="2">10</-list>
+										<-list selected value="3">12</-list>
+										<-list value="4">14</-list>
+										<-list value="5">16</-list>
+										<-list value="6">20</-list>
+										<option value="7">24</option>
+									</select>
+									<i class="fa fa-caret-down"></i>
+								</div>
+								<div class="set-text-family sc-color">
+									<select name="">
+										<option value="微软雅黑">微软雅黑</option>
+										<option value="中易宋体">中易宋体</option>
+										<option value="Helvetica">Helvetica</option>
+										<option value="Arial">Arial</option>
+										<option value="Lucida Family">Lucida Family</option>
+										<option value="Verdana">Verdana</option>
+										<option value="Tahoma">Tahoma</option>
+									</select>
+									<i class="fa fa-caret-down"></i>
+								</div>
+								<div class="set-text-align wa-text">
+									<span>对齐</span>
+									<img src="images/t_left.png" alt="" title="left" class="active justifyLeft"/>
+									<img src="images/t_center.png" alt="" title="center" class="justifyCenter" />
+									<img src="images/t_right.png" alt="" title="right" class="justifyRight" />
+								</div>
+								<div class="set-text-img wa-text">
+									<span>标题背景</span>
+									<div>
+										<input class="backColor"/>
+									</div>
+								</div>
+							</div>
+
+							<div class="tab_title top">
+								<label>图例</label>
+								<div class="tab_show">
+									<span>显示</span>
+									<input type="checkbox" checked="checked" class="tab_legend" />
+								</div>
+							</div>
+							<div class="tab_cutline">
+								<div class="tab_bar">
+									<input type="text"/>
+								</div>
+								<div class="set-text-color">
+									<div class="color-row">
+										<input type="hidden" name="unique-name-1" data-palette='["#D50000","#304FFE","#00B8D4","#69F0AE","#FFFF00"]' value="#00B8D4">
+									</div>
+								</div>
+								<div class="set-text-size sc-color">
+									<select>
+										<-list value="1">9</-list>
+										<-list value="2">10</-list>
+										<-list selected value="3">12</-list>
+										<-list value="4">14</-list>
+										<-list value="5">16</-list>
+										<-list value="6">20</-list>
+										<option value="7">24</option>
+									</select>
+									<i class="fa fa-caret-down"></i>
+								</div>
+								<div class="set-text-family sc-color">
+									<select name="">
+										<option value="微软雅黑">微软雅黑</option>
+										<option value="中易宋体">中易宋体</option>
+										<option value="Helvetica">Helvetica</option>
+										<option value="Arial">Arial</option>
+										<option value="Lucida Family">Lucida Family</option>
+										<option value="Verdana">Verdana</option>
+										<option value="Tahoma">Tahoma</option>
+									</select>
+									<i class="fa fa-caret-down"></i>
+								</div>
+								<div class="set-text-align wa-text">
+									<span>位置</span>
+									<a>上</a>
+									<a>下</a>
+									<a>左</a>
+									<a>右</a>
+								</div>
+							</div>
 						</div>
-					</div>
-					<div class="opt-attr-box">
-						<p>属性</p>
-						<div class="opt-chart-type">
-							<div class="chart-type-val">
-								<span data-type="101">柱状图</span>
-								<i class="fa fa-caret-down fr"></i>
-							</div>
-							<div class="chart-type-lists">
-								<ul>
-									<li data-type="101" class="active">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl"/>
-											<span>柱状图</span>
-										</div>
-									</li>
-									<li data-type="102">
-										<div>
-											<img src="images/icon_line_on.png" alt="" class="fl" />
-											<span>折线图</span>
-										</div>
-									</li>
-									<li data-type="103">
-										<div>
-											<img src="images/icon_pie_on.png" alt="" class="fl" />
-											<span>饼图</span>
-										</div>
-									</li>
-									<li data-type="0">
-										<div>
-											<img src="images/icon_table_on.png" alt="" class="fl" />
-											<span>表格</span>
-										</div>
-									</li>
-									<li data-type="104">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>堆叠柱状图</span>
-										</div>
-									</li>
-									<li data-type="105">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>区域图</span>
-										</div>
-									</li>
-									<li data-type="106">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>散点图</span>
-										</div>
-									</li>
-									<li data-type="107">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>甘特图</span>
-										</div>
-									</li>
-									<li data-type="108">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>仪表盘</span>
-										</div>
-									</li>
-									<li data-type="109">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>漏斗图</span>
-										</div>
-									</li>
-									<li data-type="110">
-										<div>
-											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>矩阵图</span>
-										</div>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<!--数据筛选-->
-					<div class="data-screening">
-						<p>数据筛选</p>
-						<div class="datas-pills pills">
-								<ul>
-									<!--<li>
-										<span>度量值</span>
-									</li>
-									<li>
-										<span>邮寄方式</span>
-									</li>-->
-								</ul>
-							</div>
-							<div class="data-empty empty">拖入字段</div>
-					</div>
-					<!--保存刷新-->
-					<div class="data-refresh">
-						<a onclick="refresh.save_config(id_)"><i class="fa fa-refresh"></i>刷新</a>
 					</div>
 				</div>
 				<!--图表 end-->
@@ -213,13 +329,13 @@
 				<div class="table-attr-box">
 					<div class="title-box">
 						<h3>表格</h3>
-						<ul class="tab_menu">
+						<ul class="tab_menu option-head">
 							<li class="on">数据</li>
 							<li>样式</li>
 						</ul>
 					</div>
 					<div class="clear"></div>
-					<div class="tab_box">
+					<div class="tab_box option-list">
 						<div class="tab_list">
 							<div class="set-axis-box">
 								<div class="set-x set-axis">
@@ -291,12 +407,12 @@
 								</div>
 								<div class="set-text-size sc-color">
 									<select>
-										<option value="1">9</option>
-										<option value="2">10</option>
-										<option selected value="3">12</option>
-										<option value="4">14</option>
-										<option value="5">16</option>
-										<option value="6">20</option>
+										<-list value="1">9</-list>
+										<-list value="2">10</-list>
+										<-list selected value="3">12</-list>
+										<-list value="4">14</-list>
+										<-list value="5">16</-list>
+										<-list value="6">20</-list>
 										<option value="7">24</option>
 									</select>
 									<i class="fa fa-caret-down"></i>
@@ -420,7 +536,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tab_title">
+							<div class="tab_title top">
 								<label>翻页器</label>
 								<div class="tab_show">
 									<span>显示</span>
@@ -442,12 +558,12 @@
 									<input class="backColor"/>
 								</div>
 							</div>
-							<div class="set-text-border">
+							<div class="set-text-border wa-text" style="height: 126px">
 								<span>边框</span>
-								<div class="border-img wa-text">
+								<div class="border-img" style="margin-top: 10px">
 									<input class="borderImg"/>
 								</div>
-								<div class="border-wire sc-color">
+								<div class="border-wire sc-color" style="margin-top: 10px">
 									<select>
 										<option value="solid">实线</option>
 										<option value="dashed">虚线</option>
@@ -472,8 +588,8 @@
 								<span>圆角</span>
 								<div class="radius-size">
 									<input type="number" value="0" class="text-radius"/>
-									<span class="radius-add" onclick="radiusAdd()">+</span>
-									<span class="radius-lessen" onclick="radiusLessen()">-</span>
+									<!-- <span class="radius-add" onclick="radiusAdd()">+</span>
+									<span class="radius-lessen" onclick="radiusLessen()">-</span> -->
 								</div>
 							</div>
 						</div>
