--- a/main.html
+++ b/main.html
@@ -261,7 +261,8 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage7" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<!--<iframe id="iframepage7" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>-->
+								<h3 style="color: #909090;font-size: 16px;padding-top: 10%;text-align: center;">监控中心--请点击左侧菜单在新窗口中查看!</h3>
 							</div>
 						</div>
 					</div>
