--- a/editBI.html
+++ b/editBI.html
@@ -238,12 +238,12 @@
 								</div>
 								<div class="set-text-size sc-color">
 									<select>
-										<-list value="1">9</-list>
-										<-list value="2">10</-list>
-										<-list selected value="3">12</-list>
-										<-list value="4">14</-list>
-										<-list value="5">16</-list>
-										<-list value="6">20</-list>
+										<option value="1">9</option>
+										<option value="2">10</option>
+										<option selected value="3">12</option>
+										<option value="4">14</option>
+										<option value="5">16</option>
+										<option value="6">20</option>
 										<option value="7">24</option>
 									</select>
 									<i class="fa fa-caret-down"></i>
@@ -292,12 +292,12 @@
 								</div>
 								<div class="set-text-size sc-color">
 									<select>
-										<-list value="1">9</-list>
-										<-list value="2">10</-list>
-										<-list selected value="3">12</-list>
-										<-list value="4">14</-list>
-										<-list value="5">16</-list>
-										<-list value="6">20</-list>
+										<option value="1">9</option>
+										<option value="2">10</option>
+										<option selected value="3">12</option>
+										<option value="4">14</option>
+										<option value="5">16</option>
+										<option value="6">20</option>
 										<option value="7">24</option>
 									</select>
 									<i class="fa fa-caret-down"></i>
@@ -322,6 +322,8 @@
 									<a>右</a>
 								</div>
 							</div>
+
+							
 						</div>
 					</div>
 				</div>
