--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -196,8 +196,8 @@
 		})
 
 		var property = {
-			width: 1230,
-			height: 800,
+			width:  document.body.clientWidth-200, //1230,
+			height:  document.body.clientHeight-200, //800,
 			toolBtns: ["groups", "sort", "where", "input", "output", "join"],
 			haveHead: true,
 			//        headLabel:true,
