--- a/html/stencilmanage.html
+++ b/html/stencilmanage.html
@@ -47,7 +47,9 @@
     </div>
 
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <!-- <script src="../plugin/treeview/bootstrap-treeview.js"></script> -->
     <script src="../js/login.js"></script>
+    <!-- <script src="../js/tree.js"></script> -->
     <script src="../plugin/layer/layer.js"></script>
     <script src="../js/stencilmanage.js"></script>
 </body>
