--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="footer" class="hidden">
 	<div class="foot-bar main">
 		<p>深圳市南山区科技园东方科技大厦816室</p>
-		<p>Copyright ©2017 深圳深脑大树据有限公司 版权所有 粤ICP备 11298888号-6</p>
+		<p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
 	</div>
 </div>
 
