--- a/main.html
+++ b/main.html
@@ -158,7 +158,8 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage2" src="html/static/belief.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<!--<iframe id="iframepage2" src="html/static/belief.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>-->
+								<iframe id="iframepage2" src="html/dist/index.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
 					</div>
