修改 智能信链为智能图谱

--- a/main.html
+++ b/main.html
@@ -146,7 +146,7 @@
 							<div class="sider-nav">
 								<ul>
 									<li>
-										<a href="javascript:;">智能信链</a>
+										<a href="javascript:;">智能图谱</a>
 										<ul class="">
 											<li class="active"><a href="javascript:;">企业征信</a></li>
 											<li class=""><a href="javascript:;">企业知识图谱</a></li>
