--- a/neo4j/src/browser/modules/Guides/html/start.html
+++ b/neo4j/src/browser/modules/Guides/html/start.html
@@ -1,4 +1,4 @@
-<article class="guide">
+<!-- <article class="guide">
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-2">
@@ -54,4 +54,4 @@
       <p class="text-muted">Copyright &copy;<a target="_blank" href="http://neo4j.com/" class="no-icon"> Neo4j, Inc</a>&nbsp;2002–<span>2017</span></p>
     </footer>
   </div>
-</article>
+</article> -->
